# xero-toolkit

./: Cargo.toml  README.md
gui/: Cargo.toml  build.rs
gui/resources/: resources.gresource.xml
gui/resources/css/: style.css
gui/resources/data/button_info/: biometrics.toml  containers_vms.toml  customization.toml  drivers.toml  gamescope.toml  gaming_tools.toml  kernel_schedulers.toml  main_page.toml  servicing.toml
gui/resources/ui/: main.ui
gui/resources/ui/dialogs/: button_info_dialog.ui  task_list_dialog.ui  warning_dialog.ui  xerolinux_check_dialog.ui
gui/resources/ui/tabs/: biometrics.ui  containers_vms.ui  customization.ui  drivers.ui  gamescope.ui  gaming_tools.ui  kernel_manager_scx.ui  kernel_system.ui  (+4 more)
gui/src/: config.rs  main.rs
gui/src/config/: constants.rs  user.rs
gui/src/core/: aur.rs  download.rs
gui/src/migrations/: autostart.rs  mod.rs
gui/src/ui/: app.rs  navigation.rs  utils.rs
packaging/: PKGBUILD
resources/: resources.gresource.xml
resources/ui/: main.ui  progress_dialog.ui
resources/ui/dialogs/: terminal_dialog.ui
resources/ui/tabs/: drivers.ui  gaming_tools.ui
sources/systemd/: scx.service.in
src/: main.rs
src/core/: system_check.rs
src/ui/: app.rs  command_execution.rs  context.rs  mod.rs  navigation.rs
src/ui/dialogs/: about.rs  mod.rs  terminal.rs
src/ui/pages/: containers_vms.rs  customization.rs  drivers.rs  gaming_tools.rs  main_page.rs  multimedia_tools.rs  servicing.rs
src/ui/task_runner/: executor.rs  mod.rs
tools/: bump-version.sh
xero-auth/: Cargo.toml
xero-auth/src/: protocol_io.rs
(+24 files in other folders)
