[package]
name = "xero-auth"
version.workspace = true
edition = "2021"

[[bin]]
name = "xero-authd"
path = "src/bin/daemon.rs"

[[bin]]
name = "xero-auth"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full", "net", "process", "signal", "io-util"] }
rkyv = { version = "0.8", features = ["std", "alloc"] }
log = "0.4"
simple_logger = "5.2"
anyhow = "1.0"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
pty = "0.2"

